# ms-preprocessing

./: .gitignore  Dockerfile  makefile  pyproject.toml  requirements.txt
ms_preprocessing/: PR01-2145021-MS_warp_matrices_SIFT.npy  PR01-2145262-MS_warp_matrices_SIFT.npy  alignment.py  batch_processing.py  batch_processing_script.py  exiftool.config  processing.py  settings.py  utils.py
ms_preprocessing/micasense/: capture.py  imageutils.py
