[tool.poetry]
name = "ms-preprocessing"
version = "0.1.0"
description = "Scripts for preprocessing multispectral data captured by the RedEdge-P sensor. Uses the Micasense Image Processing Library scripts."
authors = ["Andre Mattos <carlosandrematte@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.0.1"
pyexiftool = "0.4.13"
matplotlib = "^3.9.1"
pysolar = "^0.11"
scikit-image = "^0.24.0"
pandas = "^2.2.2"
imageio = "^2.34.2"
requests = "^2.32.3"
pyzbar = "^0.1.9"
mapboxgl = "^0.10.2"
jenkspy = "^0.4.1"
rawpy = "^0.22.0"
opencv-python = "^4.10.0.84"
taskipy = "^1.13.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.1"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
