[tool.poetry]
name = "ms-preprocessing"
version = "0.1.0"
description = "Scripts for preprocessing multispectral data captured by the RedEdge-P sensor. Uses the Micasense Image Processing Library scripts."
authors = ["Andre Mattos <carlosandrematte@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.*"
pyexiftool = "0.4.13"
opencv-python = "4.8.1.78"
matplotlib = "^3.9.1"
pysolar = "^0.11"
scikit-image = "^0.24.0"
pandas = "^2.2.2"
imageio = "^2.34.2"
requests = "^2.32.3"
pyzbar = "^0.1.9"
mapboxgl = "^0.10.2"
jenkspy = "^0.4.1"
taskipy = "^1.13.0"
gdal = "^3.9.1"
numpy = "1.23.4"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.1"

[tool.taskipy.tasks]
test = "pytest ."

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
