[tool.poetry]
name = "ms-preprocessing"
version = "0.1.0"
description = "Scripts for preprocessing multispectral data captured by the RedEdge-P sensor. Uses the Micasense Image Processing Library scripts."
authors = ["Andre Mattos <carlosandrematte@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
certifi = "2024.7.4"
charset-normalizer = "3.3.2"
chroma-py = "0.1.0.dev1"
colour = "0.1.5"
contourpy = "1.2.1"
cycler = "0.12.1"
exceptiongroup = "1.2.2"
fonttools = "4.53.1"
geojson = "3.1.0"
idna = "3.7"
imageio = "2.34.2"
iniconfig = "2.0.0"
kiwisolver = "1.4.5"
lazy-loader = "0.4"
mapboxgl = "0.10.2"
markupsafe = "2.1.5"
matplotlib = "3.9.1"
networkx = "3.3"
numpy = "1.23.4"
opencv-python = "4.10.0.84"
opencv-python-headless = "4.10.0.84"
packaging = "24.1"
pandas = "2.2.2"
pillow = "9.2.0"
pluggy = "1.5.0"
pyparsing = "3.1.2"
pysolar = "0.11"
python-dateutil = "2.9.0.post0"
pytz = "2024.1"
pyzbar = "0.1.9"
requests = "2.32.3"
scikit-image = "0.24.0"
scipy = "1.13.1"
six = "1.16.0"
tifffile = "2024.7.24"
tomli = "2.0.1"
tqdm = "4.66.4"
tzdata = "2024.1"
urllib3 = "2.2.2"
taskipy = "^1.13.0"
pyexiftool = "^0.5.6"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[tool.taskipy.tasks]
test = "pytest ."

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
